# ai-rag-code-analyser

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  reset_qdrant.py
agent/: code_agent.py  tools.py
data/repositories/sample-react-app/src/api/: authApi.ts  userApi.ts
data/repositories/sample-react-app/src/components/: Navbar.tsx  UserForm.tsx
data/repositories/sample-react-app/src/context/: AuthContext.tsx
data/repositories/sample-react-app/src/pages/: Dashboard.tsx  Login.tsx  Register.tsx  Users.tsx
data/repositories/sample-react-app/src/routes/: AppRoutes.tsx
data/repositories/sample-react-app/src/services/: AuthService.ts  UserService.ts
ingestion/: chunker.py  indexer.py  loader.py  parser.py
retrieval/: context_builder.py  graph_search.py  semantic_search.py
storage/: neo4j_client.py  qdrant_client.py
ui/: app.py
