[project]
name = "ai-rag-code-analyser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "neo4j>=6.2.0",
    "numpy>=2.4.6",
    "openai>=2.41.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "rich>=15.0.0",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.58.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "tqdm>=4.68.2",
    "transformers>=5.12.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
]
